client/src/index.css
@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");

html,
body,
#root,
.app {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

@tailwind base;
@tailwind components;
@tailwind utilities;

/* Interesting import of fonts without link */
@font-face {
    font-family: 'Seasons';
    src: url('./fonts/Fontspring-DEMO-theseasons-reg.otf');
}

